<resources>
    <string name="app_name">KhataBook</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_phone_number">Phone number</string>
    <string name="str_user_name">User name</string>
    <string name="title_activity_add_debit">AddDebitActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="home_fragment_label">Home Fragment</string>
    <string name="create_user_fragment_label">Create User Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="str_price">Price</string>
    <string name="str_create_item">Create Item</string>
    <string name="str_char">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="str_item">Item</string>
    <string name="str_weight_type">Weight Type</string>
    <string name="str_qty">QTY</string>
    <string name="str_khata_book">Khata Book</string>
    <string name="str_create_user">Create Customer</string>
</resources>